# HybridModelStructure

./: README.md  bioprocess.py  pyproject.toml
hybrid_modeling/core/: config.py  data.py  evaluation.py  hybrid.py  parameters.py  training.py  utils.py
hybrid_modeling/data/: loaders.py
hybrid_modeling/data/loaders/: csv.py  excel.py
hybrid_modeling/examples/bioprocess/: data.py  models.py  train.py
hybrid_modeling/models/hybrid/: ode_neural.py
hybrid_modeling/models/mechanistic/: base.py  bioprocess.py  ode.py
hybrid_modeling/models/parameters/: neural.py
hybrid_modeling/viz/: plots.py
hybrid_models/: __init__.py  data.py  evaluation.py  nn_module.py  ode_system.py  training.py  utils.py
