[tool.poetry]
name = "hybridmodelstructure"
version = "0.1.0"
description = ""
authors = ["Florian Gisperg <florian.gisperg@tuwien.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.5.3"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
plotly = "^6.0.1"
diffrax = "^0.7.0"
equinox = "^0.11.12"
optax = "^0.2.4"
openpyxl = "^3.1.5"
matplotlib = "3.9.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
