[tool.poetry]
name = "hybrid-modeling"
version = "0.1.0"
description = "A flexible framework for hybrid mechanistic-neural network modeling"
authors = ["Florian Gisperg <florian.gisperg@tuwien.ac.at>"]
packages = [{include = "hybrid_modeling"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.5.3"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
plotly = "^6.0.1"
diffrax = "^0.7.0"
equinox = "^0.11.12"
optax = "^0.2.4"
openpyxl = "^3.1.5"
matplotlib = "3.9.0"
black = "^25.1.0"
notebook = "^7.3.3"
jupyter = "^1.1.1"
jupyterlab = "^4.3.6"
jaxtyping = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
